<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
    >

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <!--item android:id="@+id/action_information" android:title="@string/action_information"
        android:orderInCategory="100" app:showAsAction="never" /-->
    <item android:id="@+id/action_infoNg" android:title="Sani fu a wowtubuku"
        android:padding="0dp"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_infoFr" android:title="A propos du dictionnaire"
        android:padding="0dp"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_infoEn" android:title="About the dictionary"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_application_information" android:title="@string/action_application_information"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_languages_settings" android:title="@string/action_languages_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_mail" android:title="@string/action_mail"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_helpNg" android:title="@string/action_helpNg"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_helpFr" android:title="@string/action_helpFr"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_helpEn" android:title="@string/action_helpEn"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
