<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >
    <!-- android:background="@drawable/gradient_background" -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true">

    <!-- Barre de progression circulaire indéterminée -->
    <!--/LinearLayout-->

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/splash_image_description"
        android:paddingBottom="15dp"
        android:src="@drawable/neenge" />

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" /> <!-- gone Masquée par défaut -->
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:textColor="#454545"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/editor_name"
        android:id="@+id/textView3" />

    <TextView
        android:id="@+id/tv_authors"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/authors"
        android:layout_alignBottom="@+id/textView3"
        android:gravity="center_horizontal"
        android:layout_margin="16dp"
        android:textSize="16sp"/>
</RelativeLayout>