<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/firstRow"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_gravity="end">

    <TextView
        android:layout_toStartOf="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_alignParentTop="true"/>

        <!--android:layout_alignParentLeft="@+id/home_button"
        android:layout_alignParentStart="@+id/home_button"/>
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        -->

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="0dp"
        android:src="@drawable/home_a_modifier"
        android:contentDescription="@string/home_button_description" />

        </RelativeLayout>

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/feedback_message_editText"
            android:autofillHints=""
            android:text="@string/comment_edit_text_default_string"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/firstRow"
        android:layout_marginTop="32sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/record_label"
        android:text="@string/audio_recorder_title"
        android:layout_below="@+id/feedback_message_editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp"
        android:textSize="20sp" /-->

    <!--Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_record"
        android:id="@+id/button"
        android:layout_below="@+id/record_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" /-->

    <!--Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_stop"
        android:id="@+id/button2"
        android:layout_alignTop="@+id/button"
        android:layout_centerHorizontal="true" /-->

    <!--Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_play"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_alignRight="@+id/firstRow"
        android:layout_alignEnd="@+id/firstRow" /-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_mail"
        android:textAllCaps="false"
        android:id="@+id/send_button"
        android:layout_below="@+id/feedback_message_editText"
        android:layout_marginTop="32dp" />

    <!--CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/soundFileBox"
        android:text="@string/add_sound"
        android:layout_below="@+id/button"/-->

</RelativeLayout>